# stanza

./: .gitignore  Cargo.toml  README.md
.github/workflows/: master.yml  pull_request.yml
benches/: paint_fancy.rs
examples/: bare.rs  basic.rs  borders.rs  composite.rs  computed.rs  fancy.rs  hints.rs  inner_headers.rs  inner_separator.rs  multiplication.rs  nested.rs  outer_headers.rs  outer_separators.rs  styled.rs  sudoku.rs  wrap.rs
src/: lazy.rs  lib.rs  memoized.rs  model.rs  renderer.rs  style.rs  table.rs
src/lazy/: tests.rs
src/memoized/: tests.rs
src/renderer/: console.rs  markdown.rs  tests.rs
src/style/: bg_16.rs  blink.rs  bold.rs  border_16.rs  border_bg.rs  border_colour.rs  border_fg.rs  fg_16.rs  fill_bg.rs  fill_invert.rs  halign.rs  header.rs  italic.rs  max_width.rs  min_width.rs  palette_16.rs  separator.rs  strikethrough.rs  tests.rs  text_bg.rs  text_fg.rs  text_invert.rs  underline.rs
src/table/: tests.rs
