[package]
name = "stanza"
version = "0.4.0"
edition = "2021"
readme = "README.md"
authors = ["Emil Koutanov"]
license = "MIT"
description = "An abstract table model with customisable text formatting and renderers."
repository = "https://github.com/obsidiandynamics/stanza"
keywords = ["cli", "terminal", "table", "format", "no_std"]
exclude = ["/images", "/bin", "/.idea", "/.github", "/coverage", "/doc", "/examples"]

[dependencies]

[dev-dependencies]
chrono = "0.4.31"
criterion = { version = "0.5.1", features = ["html_reports"] }
terminal_size = "0.3.0"

[[bench]]
name = "paint_fancy"
harness = false
